backends/drm: leave all outputs disabled by default, including VR headsets

This ensures that we don't fail to enable normal screens when the non-desktop ones can't be
enabled.

BUG: 493148